--- a/app/views/water-r3/current/eligibility/funding/check-details.html
+++ b/app/views/water-r3/current/eligibility/funding/check-details.html
@@ -1,11 +1,7 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-   Check Your Details
-{% endblock %}
-
-{% block beforeContent %}
-    <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+    Are you currently irrigating?
 {% endblock %}
 
 {% block content %}
@@ -208,7 +204,7 @@
      </div>
     <div class="govuk-grid-row govuk-!-padding-top-8">
         <div class="govuk-grid-column-two-thirds">
-            <form class="form" action="{{ nextUrl }}" method="post">
+            <form class="form" action="consent" method="post">
                 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                     Continue
                 </button>
