html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/check-details.html
+++ b/app/views/water-r3/current/eligibility/funding/check-details.html
@@ -1,14 +1,14 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-    Are you currently irrigating?
+    Check your details
 {% endblock %}
 
 {% block content %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l govuk-!-margin-top-9 govuk-!-margin-bottom-9">Check your details </h1>
+            <h1 class="govuk-heading-l">Check your details</h1>
 
             {#business details #}
 
@@ -72,7 +72,7 @@
 
                 </tbody>
             </table>
-            <br><br><br>
+            <br><br>
 
             {# include agent details only if applicant is Agent  #}
 
