--- a/app/views/water-r3/current/eligibility/funding/consent.html
+++ b/app/views/water-r3/current/eligibility/funding/consent.html
@@ -16,14 +16,18 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-form-group govuk-!-margin-bottom-9">
+
       <fieldset class="govuk-fieldset" aria-describedby="consent-to-terms-hint">
-        <h1 class="govuk-heading-l">Confirm and send</h1>
+
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">Confirm and send</h1>
+        </legend>
+
           <p class="govuk-body">I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
           <p class="govuk-body">I understand the project’s eligibility and score is based on the answers I provided.</p>
-          <p class="govuk-body">I am aware that the information I submit will be:</p>
+          
+          <p class="govuk-body">I am aware that the information I submit will be:</p>  
             <ul class="govuk-list govuk-list--bullet">
-
               <li>checked by the RPA</li>
               <li>shared with the Environment Agency so that they can check the details of my planned project</li>
             </ul>
@@ -31,18 +35,20 @@
 
             <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third-party working for us, to contact you.</p>
 
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
-                <label class="govuk-label govuk-checkboxes__label" for="confirm">
+            <div class="govuk-checkboxes__item govuk-!-margin-top-6">
+              <input class="govuk-checkboxes__input" id="consent-to-terms-hint" name="consent-to-terms-hint" type="checkbox" value="{{ data['confirmation'] }}">
+                <label class="govuk-label govuk-checkboxes__label" for="consent-to-terms-hint">
                   (Optional)   I consent to being contacted about improving services
                 </label>
-              </div>
             </div>
 
         {{ govukWarningText({
           text: "You can only submit your details once.",
-          iconFallbackText: "Warning"
+          iconFallbackText: "Warning",
+          classes: "govuk-!-margin-top-6"
         }) }}
+
+      </fieldset>
 
 
     <form class="form" action="{{ nextUrl }}" method="post">
@@ -52,6 +58,7 @@
     </form>
 
 </div>
+
     <div class="govuk-body govuk-grid-column-full">
       <p><hr class="govuk-section-break govuk-section-break--visible"></hr></p>
       <p>The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA.For information on how we handle personal data go to <a href="#" rel="noreferrer noopener" target="_blank">GOV.UK (opens in new tab)</a> and search
