html to nunjucks

--- a/app/views/water-r3/current/eligibility/funding/consent.html
+++ b/app/views/water-r3/current/eligibility/funding/consent.html
@@ -51,7 +51,7 @@
       </fieldset>
 
 
-    <form class="form" action="{{ nextUrl }}" method="post">
+    <form class="form" action="reference-number" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
       </button>
