title changed to match banner

--- a/app/views/water-r3/current/eligibility/funding/reference-number.html
+++ b/app/views/water-r3/current/eligibility/funding/reference-number.html
@@ -3,7 +3,7 @@
 {% set hideBackButton = true %}
 
 {% block pageTitle %}
-     Confirmation
+     Details submitted
 {% endblock %}
 
 {% block content %}
