adding checkboxes to list code to check answers

--- a/app/views/water-r3/current/eligibility/common/project-items.html
+++ b/app/views/water-r3/current/eligibility/common/project-items.html
@@ -17,7 +17,8 @@
               <form method="post" action="../funding/cost">
 
                {{ govukCheckboxes({
-                  name: "Reservoir construction and infrastructure",
+                  idPrefix: 'items-needed',
+                  name: 'items-needed',
                   fieldset: {
                     legend: {
                       text: "Reservoir construction and infrastructure",
